syntax = "proto3";

option csharp_namespace = "MovieService.gRPC";

package movie;

service MovieManagement {
  rpc GetMovieById (GetMovieRequest) returns (GetMovieReply);
}

message GetMovieRequest {
  int32 id = 1;
}

message Genre {
    string name = 1; 
}
message Movie{
    int32 id = 1;
    string title = 2;
    string description = 3;
    repeated Genre genre = 4;
    string director = 5;
    int32 releaseYear = 6;
    string youTubeLink = 7;
}
message GetMovieReply {
  bool succeeded = 1;
  string message = 2;
  Movie movie = 3;
}